mocks_removed fixed items field in contracts (problems with jumps when chamge sort type)

--- a/frontend/src/public/styles/contracts.module.scss
+++ b/frontend/src/public/styles/contracts.module.scss
@@ -343,7 +343,7 @@
     flex-direction: column;
     width: 100%;
     min-height: 0px;
-    max-height: 956px;
+    height: 956px;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.05);
     padding: 30px 35px 30px 35px;
